apps/homarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homarr
  template:
    metadata:
      labels:
        app: homarr
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/hostname: homelab
      containers:
        - name: homarr
          image: ghcr.io/homarr-labs/homarr:v2.2.0
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: homarr-storage
              mountPath: /appdata
      volumes:
        - name: homarr-storage
          persistentVolumeClaim:
            claimName: homarr-data-pvc
