apps/homarr/homarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homarr
  template:
    metadata:
      labels:
        app: homarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: homelab
      containers:
        - name: homarr
          image: ghcr.io/homarr-labs/homarr:latest
          ports:
            - containerPort: 7575
              name: http
          volumeMounts:
            - name: homarr-storage
              mountPath: /appdata
      volumes:
        - name: homarr-storage
          persistentVolumeClaim:
            claimName: homarr-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: homarr-web-svc
  namespace: monitoring
spec:
  ports:
    - name: http
      port: 7575
      targetPort: 7575
  selector:
    app: homarr
