apps/homarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homarr-ingress
  namespace: monitoring
spec:
  ingressClassName: traefik # Modern syntax to avoid cluster configuration warnings
  rules:
    - host: homarr.zieqs.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homarr-web-svc # Connects perfectly to the internal extension above
                port:
                  number: 7575
